Add OrmConnectionTest